--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "codeigniter4/framework": "^4.5"
+        "codeigniter4/framework": "^4.5",
+        "firebase/php-jwt": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
