--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "php": "^8.1",
         "codeigniter4/framework": "^4.5",
-        "firebase/php-jwt": "^7.0"
+        "firebase/php-jwt": "^7.0",
+        "zircote/swagger-php": "^6.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
