--- a/.env.example
+++ b/.env.example
@@ -63,6 +63,28 @@ encryption.key = ''
 JWT_SECRET_KEY = ''
 
 #--------------------------------------------------------------------
+# CORS (Cross-Origin Resource Sharing)
+#--------------------------------------------------------------------
+
+# Comma-separated list of allowed origins
+# Examples:
+#   Development: http://localhost:3000,http://localhost:5173
+#   Production: https://app.example.com,https://admin.example.com
+#   Wildcard subdomain: https://*.example.com
+#   Allow all (NOT RECOMMENDED in production): *
+CORS_ALLOWED_ORIGINS = 'http://localhost:3000,http://localhost:8080,http://localhost:5173'
+
+#--------------------------------------------------------------------
+# RATE LIMITING
+#--------------------------------------------------------------------
+
+# Maximum requests per window (per IP or token)
+RATE_LIMIT_REQUESTS = 60
+
+# Time window in seconds
+RATE_LIMIT_WINDOW = 60
+
+#--------------------------------------------------------------------
 # SESSION
 #--------------------------------------------------------------------
 
