fix: Invalid .env values

--- a/.env.example
+++ b/.env.example
@@ -41,7 +41,7 @@ database.tests.database = ci4_test
 database.tests.username = root
 database.tests.password = YOUR_DATABASE_PASSWORD_HERE
 database.tests.DBDriver = MySQLi
-database.tests.DBPrefix = test_
+database.tests.DBPrefix = ""
 database.tests.charset = utf8mb4
 database.tests.DBCollat = utf8mb4_general_ci
 database.tests.port = 3306
@@ -52,7 +52,7 @@ database.tests.port = 3306
 
 # CRITICAL: Generate a secure key for production!
 # Run: php spark key:generate
-encryption.key = ''
+encryption.key = ""
 
 #--------------------------------------------------------------------
 # JWT AUTHENTICATION
@@ -60,7 +60,7 @@ encryption.key = ''
 
 # CRITICAL: Change this to a strong random value in production!
 # Generate with: openssl rand -base64 64
-JWT_SECRET_KEY = ''
+JWT_SECRET_KEY = ""
 
 #--------------------------------------------------------------------
 # CORS (Cross-Origin Resource Sharing)
