Email System + Queue Infrastructure

--- a/.env.example
+++ b/.env.example
@@ -96,3 +96,47 @@ RATE_LIMIT_WINDOW = 60
 #--------------------------------------------------------------------
 
 # logger.threshold = 4
+
+#--------------------------------------------------------------------
+# EMAIL CONFIGURATION
+#--------------------------------------------------------------------
+
+# Email service settings
+EMAIL_FROM_ADDRESS = noreply@example.com
+EMAIL_FROM_NAME = "API Application"
+
+# Email provider: smtp, sendmail, mail
+EMAIL_PROVIDER = smtp
+
+# SMTP Configuration
+# For development, use Mailtrap.io or similar service
+EMAIL_SMTP_HOST = smtp.mailtrap.io
+EMAIL_SMTP_PORT = 2525
+EMAIL_SMTP_USER =
+EMAIL_SMTP_PASS =
+EMAIL_SMTP_CRYPTO = tls
+
+# Alternative SMTP examples:
+# Gmail: smtp.gmail.com:587 (requires app password)
+# SendGrid: smtp.sendgrid.net:587
+# Amazon SES: email-smtp.us-east-1.amazonaws.com:587
+
+#--------------------------------------------------------------------
+# QUEUE CONFIGURATION
+#--------------------------------------------------------------------
+
+# Queue driver: database, redis, sync
+# database = Store jobs in database (default)
+# redis = Store jobs in Redis (faster, requires Redis)
+# sync = Execute immediately (no queue, for testing)
+QUEUE_DRIVER = database
+
+# Redis configuration (if using redis driver)
+QUEUE_REDIS_HOST = 127.0.0.1
+QUEUE_REDIS_PORT = 6379
+QUEUE_REDIS_PASSWORD =
+QUEUE_REDIS_DATABASE = 0
+
+# Queue retry settings
+QUEUE_MAX_ATTEMPTS = 3
+QUEUE_RETRY_AFTER = 90
