--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^8.1",
         "codeigniter4/framework": "^4.5",
         "firebase/php-jwt": "^7.0",
+        "symfony/mailer": "^6.4",
         "zircote/swagger-php": "^6.0"
     },
     "require-dev": {
