Add Logging, Monitoring & Health Checks

--- a/.env.example
+++ b/.env.example
@@ -140,3 +140,45 @@ QUEUE_REDIS_DATABASE = 0
 # Queue retry settings
 QUEUE_MAX_ATTEMPTS = 3
 QUEUE_RETRY_AFTER = 90
+
+#--------------------------------------------------------------------
+# LOGGING CONFIGURATION
+#--------------------------------------------------------------------
+
+# Log level: debug, info, notice, warning, error, critical, alert, emergency
+LOG_LEVEL = debug
+
+# Log format: json, text
+LOG_FORMAT = json
+
+# Include database queries in logs (development only)
+LOG_INCLUDE_QUERIES = true
+
+#--------------------------------------------------------------------
+# SENTRY ERROR TRACKING
+#--------------------------------------------------------------------
+
+# Sentry DSN (leave empty to disable)
+SENTRY_DSN =
+
+# Environment name for Sentry
+SENTRY_ENVIRONMENT = development
+
+# Sample rate for performance monitoring (0.0 to 1.0)
+SENTRY_TRACES_SAMPLE_RATE = 0.2
+
+#--------------------------------------------------------------------
+# MONITORING & METRICS
+#--------------------------------------------------------------------
+
+# Enable monitoring features
+MONITORING_ENABLED = true
+
+# Slow query threshold in milliseconds
+SLOW_QUERY_THRESHOLD = 1000
+
+# Enable metrics collection
+METRICS_ENABLED = true
+
+# Enable request/response logging
+REQUEST_LOGGING_ENABLED = true
