--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
         "php": "^8.1",
         "codeigniter4/framework": "^4.5",
         "firebase/php-jwt": "^7.0",
+        "monolog/monolog": "^3.5",
+        "sentry/sentry": "^4.6",
         "symfony/mailer": "^6.4",
         "zircote/swagger-php": "^6.0"
     },
