Add Advanced Pagination, Filtering & Search

--- a/.env.example
+++ b/.env.example
@@ -182,3 +182,19 @@ METRICS_ENABLED = true
 
 # Enable request/response logging
 REQUEST_LOGGING_ENABLED = true
+
+#--------------------------------------------------------------------
+# PAGINATION & SEARCH
+#--------------------------------------------------------------------
+
+# Default number of items per page
+PAGINATION_DEFAULT_LIMIT = 20
+
+# Maximum number of items per page
+PAGINATION_MAX_LIMIT = 100
+
+# Minimum search query length
+SEARCH_MIN_LENGTH = 3
+
+# Enable full-text search
+SEARCH_ENABLED = true
