Add File Management & Cloud Storage

--- a/.env.example
+++ b/.env.example
@@ -198,3 +198,26 @@ SEARCH_MIN_LENGTH = 3
 
 # Enable full-text search
 SEARCH_ENABLED = true
+
+#--------------------------------------------------------------------
+# FILE STORAGE
+#--------------------------------------------------------------------
+
+# Storage driver: local, s3
+FILE_STORAGE_DRIVER = local
+
+# Maximum file size in bytes (10MB default)
+FILE_MAX_SIZE = 10485760
+
+# Allowed file types (comma-separated)
+FILE_ALLOWED_TYPES = jpg,jpeg,png,gif,pdf,doc,docx,txt,zip
+
+# Local storage path (relative to FCPATH)
+FILE_UPLOAD_PATH = writable/uploads/
+
+# AWS S3 Configuration
+AWS_ACCESS_KEY_ID =
+AWS_SECRET_ACCESS_KEY =
+AWS_DEFAULT_REGION = us-east-1
+AWS_BUCKET =
+AWS_URL =
