--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,15 @@ encryption.key = ""
 # Generate with: openssl rand -base64 64
 JWT_SECRET_KEY = ""
 
+# JWT token expiration (in seconds)
+JWT_ACCESS_TOKEN_TTL = 3600
+
+# Refresh token expiration (in seconds, 7 days default)
+JWT_REFRESH_TOKEN_TTL = 604800
+
+# Enable token revocation checking
+JWT_REVOCATION_CHECK = true
+
 #--------------------------------------------------------------------
 # CORS (Cross-Origin Resource Sharing)
 #--------------------------------------------------------------------
