--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,7 @@
 parameters:
     level: 6
+    bootstrapFiles:
+        - app/Helpers/validation_helper.php
     paths:
         - app/Controllers
         - app/Services
