Added AUTH_REQUIRE_EMAIL_VERIFICATION flag

--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,9 @@ JWT_REFRESH_TOKEN_TTL = 604800
 # Enable token revocation checking
 JWT_REVOCATION_CHECK = true
 
+# Require email verification before allowing login/refresh/protected routes
+AUTH_REQUIRE_EMAIL_VERIFICATION = true
+
 #--------------------------------------------------------------------
 # CORS (Cross-Origin Resource Sharing)
 #--------------------------------------------------------------------
