Add Claude Code agent for automated CRUD generation
Includes a specialized agent that acts as an expert architect for this
project, helping developers generate complete CRUD resources following
all established architectural patterns.

Changes:
- Add .claude/agents/ci4-api-crud-builder.md - Specialized agent with deep project knowledge
- Add .claude/README.md - Documentation on how to use the agent
- Add CLAUDE.md - Development guide for AI assistants
- Update README.md - Add AI-Assisted Development section
- Update .gitignore - Include Claude Code files but ignore personal settings

The agent automatically helps with:
- Creating migrations, entities, models, services, controllers, and tests
- Following Controller → Service → Model → Entity architecture
- Maintaining code consistency and best practices
- Generating OpenAPI documentation

--- a/.gitignore
+++ b/.gitignore
@@ -177,6 +177,8 @@ docker/data/
 *.bak
 backup/
 
-CLAUDE.md
-
-AGENTS.md
+#-------------------------
+# Claude Code
+#-------------------------
+# Keep documentation and agents, but ignore personal settings
+.claude/settings.local.json
