docs: enhance S3 configuration documentation

--- a/.env.example
+++ b/.env.example
@@ -234,9 +234,32 @@ FILE_ALLOWED_TYPES = jpg,jpeg,png,gif,pdf,doc,docx,txt,zip
 # Local storage path (relative to FCPATH)
 FILE_UPLOAD_PATH = writable/uploads/
 
-# AWS S3 Configuration
+#--------------------------------------------------------------------
+# AWS S3 CONFIGURATION (when FILE_STORAGE_DRIVER = s3)
+#--------------------------------------------------------------------
+
+# AWS IAM Access Key ID
+# Create dedicated IAM user with permissions: s3:PutObject, s3:GetObject, s3:DeleteObject, s3:ListBucket
+# NEVER use root credentials
 AWS_ACCESS_KEY_ID =
+
+# AWS IAM Secret Access Key
 AWS_SECRET_ACCESS_KEY =
+
+# AWS Region where S3 bucket is located
+# Common regions: us-east-1 (N.Virginia), us-west-2 (Oregon), eu-west-1 (Ireland)
 AWS_DEFAULT_REGION = us-east-1
+
+# S3 Bucket Name (must be globally unique)
+# Example: myapp-uploads-production
+# Recommended settings:
+#   - Versioning: Enabled
+#   - Block public access: Enabled
+#   - Encryption: AES-256 or KMS
 AWS_BUCKET =
+
+# Custom Base URL for file access (OPTIONAL)
+# Use for CloudFront CDN or custom domain
+# If empty, uses default: https://{bucket}.s3.{region}.amazonaws.com/{path}
+# Example: https://d1234567890.cloudfront.net
 AWS_URL =
