chore: agregar seeder de carga y ajustes de configuración/guía

--- a/.env.example
+++ b/.env.example
@@ -235,6 +235,16 @@ FILE_ALLOWED_TYPES = jpg,jpeg,png,gif,pdf,doc,docx,txt,zip
 FILE_UPLOAD_PATH = writable/uploads/
 
 #--------------------------------------------------------------------
+# ADMIN SEEDER (Initial Admin User)
+#--------------------------------------------------------------------
+
+# Initial admin user created by: php spark db:seed UserSeeder
+ADMIN_SEED_EMAIL = admin@yourdomain.com
+ADMIN_SEED_PASSWORD = change-this-password
+ADMIN_SEED_FIRST_NAME = Admin
+ADMIN_SEED_LAST_NAME = User
+
+#--------------------------------------------------------------------
 # AWS S3 CONFIGURATION (when FILE_STORAGE_DRIVER = s3)
 #--------------------------------------------------------------------
 
