--- a/.env.example
+++ b/.env.example
@@ -86,6 +86,15 @@ AUTH_REQUIRE_EMAIL_VERIFICATION = true
 #   Allow all (NOT RECOMMENDED in production): *
 CORS_ALLOWED_ORIGINS = 'http://localhost:3000,http://localhost:8080,http://localhost:5173'
 
+# Enable Access-Control-Allow-Credentials header
+CORS_SUPPORTS_CREDENTIALS = false
+
+# Override defaults only if needed
+# CORS_ALLOWED_METHODS = GET,POST,PUT,PATCH,DELETE,OPTIONS
+# CORS_ALLOWED_HEADERS = Content-Type,Authorization,X-Requested-With,Accept,Origin
+# CORS_EXPOSED_HEADERS = X-RateLimit-Limit,X-RateLimit-Remaining,X-RateLimit-Reset
+# CORS_MAX_AGE = 86400
+
 #--------------------------------------------------------------------
 # RATE LIMITING
 #--------------------------------------------------------------------
