feat: métricas de observabilidad

--- a/.env.example
+++ b/.env.example
@@ -211,6 +211,9 @@ METRICS_ENABLED = true
 # Enable request/response logging
 REQUEST_LOGGING_ENABLED = true
 
+# SLO target for API request latency (p95, in milliseconds)
+SLO_API_P95_TARGET_MS = 500
+
 #--------------------------------------------------------------------
 # PAGINATION & SEARCH
 #--------------------------------------------------------------------
