--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,8 @@ jobs:
         run: composer install --prefer-dist --no-progress --no-interaction
 
       - name: Run static analysis
+        # PHPStan level 6 - BLOCKING (failures will fail the build)
+        # This ensures code quality and type safety standards are maintained
         run: composer phpstan
 
       - name: Check code style
