Ignores test upload directory
Excludes the test upload directory from version control.

This prevents test files from being inadvertently committed
to the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,5 @@ backup/
 #-------------------------
 # Keep documentation and agents, but ignore personal settings
 .claude/settings.local.json
+
+public/writable/tests/uploads/
