chore(env): add API key rate limit env variables

--- a/.env.example
+++ b/.env.example
@@ -113,6 +113,22 @@ AUTH_RATE_LIMIT_REQUESTS = 5
 AUTH_RATE_LIMIT_WINDOW = 900
 
 #--------------------------------------------------------------------
+# API KEY RATE LIMITING
+#--------------------------------------------------------------------
+
+# Maximum requests per window for API key clients (global key budget)
+API_KEY_RATE_LIMIT_DEFAULT = 600
+
+# Per-user request budget when an authenticated user sends requests with an API key
+API_KEY_USER_RATE_LIMIT_DEFAULT = 60
+
+# Per-IP defensive limit when an unauthenticated client uses an API key
+API_KEY_IP_RATE_LIMIT_DEFAULT = 200
+
+# Rate limit window in seconds for API key clients
+API_KEY_WINDOW_DEFAULT = 60
+
+#--------------------------------------------------------------------
 # SESSION
 #--------------------------------------------------------------------
 
