feat(auth): support client web links with allowlisted base urls

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,13 @@ app.baseURL = 'http://localhost:8080'
 # app.forceGlobalSecureRequests = false
 # app.CSPEnabled = false
 
+# Public web app URL used for email links (verify/reset/invitation)
+WEBAPP_BASE_URL = 'http://localhost:8081'
+
+# Optional allowlist for client-provided base URLs (comma-separated)
+# If empty, only WEBAPP_BASE_URL is allowed.
+WEBAPP_ALLOWED_BASE_URLS = 'http://localhost:8081'
+
 #--------------------------------------------------------------------
 # DATABASE - Local Development
 #--------------------------------------------------------------------
