--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,9 @@ jobs:
       - name: Check code style
         run: composer cs-check
 
+      - name: Run i18n checks
+        run: composer i18n-check
+
       - name: Create .env file from example
         run: cp .env.example .env
 
