feat(auth): add Google ID token login flow with pending-approval lifecycle

--- a/.env.example
+++ b/.env.example
@@ -81,6 +81,9 @@ JWT_REVOCATION_CHECK = true
 # Require email verification before allowing login/refresh/protected routes
 AUTH_REQUIRE_EMAIL_VERIFICATION = true
 
+# Google OAuth client ID used to validate Google ID tokens
+GOOGLE_CLIENT_ID =
+
 #--------------------------------------------------------------------
 # CORS (Cross-Origin Resource Sharing)
 #--------------------------------------------------------------------
