--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "aws/aws-sdk-php": "^3.369",
         "codeigniter4/framework": "^4.5",
         "firebase/php-jwt": "^7.0",
+        "google/apiclient": "^2.17",
         "league/flysystem": "^3.31",
         "league/flysystem-aws-s3-v3": "^3.31",
         "monolog/monolog": "^3.5",
