chore: migrate test suite to SQLite and introduce security context infrastructure
Implement SecurityContext DTO and ContextHolder for identity propagation. Switch test database to SQLite for improved performance and isolation. Update CI workflows to use standard composer scripts.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,4 +149,4 @@ jobs:
           echo "✓ Database connection successful"
 
       - name: Run tests
-        run: vendor/bin/phpunit --configuration phpunit.xml --no-coverage --testdox
+        run: composer test
