--- a/composer.json
+++ b/composer.json
@@ -41,13 +41,25 @@
     },
     "scripts": {
         "test:prepare-db": "php spark tests:prepare-db",
-        "test:unit": "composer test:prepare-db && phpunit --testsuite=Unit --configuration=phpunit.xml --no-coverage --testdox",
-        "test:integration": "composer test:prepare-db && phpunit --testsuite=Integration --configuration=phpunit.xml --no-coverage --testdox",
-        "test:feature": "composer test:prepare-db && phpunit --testsuite=Feature --configuration=phpunit.xml --no-coverage --testdox",
-        "test": "@test:prepare-db && phpunit --configuration=phpunit.xml --no-coverage --testdox",
+        "test:unit": [
+            "@test:prepare-db",
+            "phpunit --testsuite=Unit --configuration=phpunit.xml --no-coverage --testdox"
+        ],
+        "test:integration": [
+            "@test:prepare-db",
+            "phpunit --testsuite=Integration --configuration=phpunit.xml --no-coverage --testdox"
+        ],
+        "test:feature": [
+            "@test:prepare-db",
+            "phpunit --testsuite=Feature --configuration=phpunit.xml --no-coverage --testdox"
+        ],
+        "test": [
+            "@test:prepare-db",
+            "phpunit --configuration=phpunit.xml --no-coverage --testdox"
+        ],
         "phpstan": "phpstan analyse --memory-limit=512M",
         "cs-fix": "php-cs-fixer fix",
-        "cs-check": "php-cs-fixer fix --dry-run --diff",
+        "cs-check": "php-cs-fixer fix --dry-run --diff --sequential",
         "i18n-check": "php scripts/i18n-check.php",
         "quality": [
             "@cs-check",
